After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 606158 - "Always on top" triggers Window manager warning: Log level 8: meta_window_set_user_time: assertion `!window->override_redirect' failed
"Always on top" triggers Window manager warning: Log level 8: meta_window_set...
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-01-05 22:11 UTC by Colin Walters
Modified: 2010-08-18 21:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix !window->override_redirect errors (1.46 KB, patch)
2010-07-28 02:55 UTC, Nickolas Lloyd
none Details | Review
Fix !window->override_redirect errors (1.05 KB, patch)
2010-07-28 18:43 UTC, Nickolas Lloyd
committed Details | Review

Description Colin Walters 2010-01-05 22:11:53 UTC
Probably just need to check if (!meta_window_is_override_redirect ())
Comment 1 Nickolas Lloyd 2010-07-28 02:55:18 UTC
Created attachment 166680 [details] [review]
fix !window->override_redirect errors

This patch adds a simple check to event_callback () to check whether the window is override-redirect or not, and avoids unnecessarily calling meta_window_set_user_time () if it is.

This seems to fix all occurrences of this error, at least as triggered within the window menu, ie from clicking "Always on top," "Move to workspace left," etc.

I do wonder though, would it not be better to attach event_callback () to each individual window that needs to be managed as it is created to avoid having these checks in the first place?

Thanks,
Nick
Comment 2 Nickolas Lloyd 2010-07-28 18:43:44 UTC
Created attachment 166731 [details] [review]
Fix !window->override_redirect errors

bah, uploaded the wrong patch.  This is the right one
Comment 3 Owen Taylor 2010-08-18 21:23:07 UTC
Pushed with two trivial changes:

 - Line-wrapped the body of the commit message
 - Fixed the line-breaking in the code to match the structure of the if statement